# server/src/main/kotlin/auth/AuthModels.kt
@@ -3,7 +3,7 @@ package com.rewild.auth
 import kotlinx.serialization.Serializable
 
 @Serializable
-data class RegisterRequest(val email: String, val password: String)
+data class RegisterRequest(val email: String, val password: String, val username: String)
 
 @Serializable
 data class LoginRequest(val email: String, val password: String)
